--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,16 @@ backend/node_modules/
 
 frontend/node_modules/
 
+frontend/assets/images/
 
+frontend/assets/images/user/
+
+backend/uploads/
+
+backend/.env
+
+backend/uploads/
+
+backend/uploads/
+
+backend/uploads/
