--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,7 @@ MONGODB_URI=mongodb://localhost:27017/mca2025
 JWT_SECRET=your_jwt_secret_key_here
 FRONTEND_URL=http://localhost:5173
 VOTING_DURATION_HOURS=3
+AWS_ACCESS_KEY_ID=your_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_key
+AWS_REGION=your_region (e.g., us-east-1)
+S3_BUCKET_NAME=your_bucket_name
